crates/zoid-tui/tests/snapshots/shell_snapshot__question_overlay_freetext_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
assertion_line: 750
expression: "draw_question(q, 100, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 24 },
    content: [
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                        ╭ zoid · question ─────────────────────────────────╮                        ",
        "                        │                                                  │                        ",
        "                        │ Describe the bug                                 │                        ",
        "                        │                                                  │                        ",
        "                        │ ▌                                                │                        ",
        "                        │                                                  │                        ",
        "                        │ ⏎ submit · empty = let you decide · Esc take over│                        ",
        "                        ╰──────────────────────────────────────────────────╯                        ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 7, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 9, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
