crates/zoid-tui/tests/snapshots/shell_snapshot__question_overlay_pick_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
assertion_line: 743
expression: "draw_question(q, 100, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 24 },
    content: [
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                            ╭ zoid · question ────────────────────────╮                             ",
        "                            │                                         │                             ",
        "                            │ Which DB?                               │                             ",
        "                            │                                         │                             ",
        "                            │ postgres                                │                             ",
        "                            │ sqlite                                  │                             ",
        "                            │ Other… (type my own)                    │                             ",
        "                            │ — let you decide —                      │                             ",
        "                            ╰─────────────────────────────────────────╯                             ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 7, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 9, fg: Rgb(201, 209, 217), bg: Rgb(22, 51, 92), underline: Reset, modifier: NONE,
        x: 38, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 10, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 12, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
