crates/zoid-tui/tests/snapshots/shell_snapshot__session_drawer_open_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 160, 40)"
---
"v0.4.0                                                                        zoid                                        Esc interrupt · : command · ^P palette"
"  00:00 › what's causing the 500?                                                                                 █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                                                                                  █ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(118, " ")]
"  00:00 zoid an unwrapped lookup in the handler.                                                                  █ │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📝 changes +0 -0 · 0 files               │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▸ session ──────────────────────────────╮ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ context · tokens ─────────────────────╮ "
"                                                                                                                  █ │churn                              cache │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                                                                                  █ │no tasks                                 │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ subagents ────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT   SELECT                                                ⊟ compact     ● idle      ◐ tool                                                      zoom normal "
