crates/zoid-tui/tests/snapshots/shell_snapshot__status_chip_shows_active_mode.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 160, 40)"
---
"v0.4.0                                                                        zoid                                        Esc interrupt · : command · ^P palette"
"  00:00 › what's causing the 500?                                                                                 █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                                                                                  █ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(118, " ")]
"  00:00 zoid an unwrapped lookup in the handler.                                                                  █ │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📝 changes +0 -0 · 0 files               │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ session ──────────────────────────────╮ "
"                                                                                                                  █ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │🤖  ·                                    │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │⌚ tok 0  tps 0                          │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📁 cwd                                   │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ context · tokens ─────────────────────╮ "
"                                                                                                                  █ │churn                              cache │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                                                                                  █ │no tasks                                 │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ subagents ────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" SUPERPOWERS   SELECT                                         ⊟ compact     ● idle      ◐ tool                                                      zoom normal "
